# mise-devbox

./: .dockerignore  .env.example  .gitignore  .mise.toml  ISSUE-1.md  MIRROR_PROPOSAL.md  README.md  doc  docker-compose.yml  opencode.json.example  package.json  plan.md  pyproject.toml  smoke_test.py  user-story.md
build-plan/: PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  PHASE-6.md
docker/: Dockerfile  MIRROR_PROPOSAL.md  entrypoint.sh  mise-china.toml  mise-global.toml
docs/: architecture.md  operations.md  user-story.md
scripts/: check-host  compose  install-brew  install-global  install_homebrew.sh  task-harness-clean  task-harness-down  task-harness-up  toolchain
scripts/lib/: common.sh
