[project]
name = "ai-agent-harness"
version = "0.1.0"
description = "A minimal AI-Agent harness toolchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "redis>=5.0.0",
    "qdrant-client>=1.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
